--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-    "name": "wildduck-mta",
-    "private": true,
-    "version": "1.1.0",
-    "description": "MTA component for the Wild Duck Mail Server",
-    "author": "Andris Reinman",
-    "license": "EUPL-1.1",
-    "scripts": {
-        "start": "node index.js --config=config/wildduck-mta.toml",
-        "config": "NODE_CONFIG_ONLY=true npm start",
-        "test": "grunt"
-    },
-    "dependencies": {
-        "zone-mta": "1.1.1",
-        "zonemta-delivery-counters": "^1.0.1",
-        "zonemta-loop-breaker": "1.0.2",
-        "zonemta-wildduck": "^1.3.27"
-    },
-    "devDependencies": {
-        "eslint-config-nodemailer": "^1.2.0",
-        "grunt": "^1.0.1",
-        "grunt-cli": "^1.2.0",
-        "grunt-eslint": "^20.0.0"
-    },
-    "optionalDependencies": {}
+  "name": "wildduck-mta",
+  "private": true,
+  "version": "1.1.0",
+  "description": "MTA component for the Wild Duck Mail Server",
+  "author": "Andris Reinman",
+  "license": "EUPL-1.1",
+  "scripts": {
+    "start": "node index.js --config=config/wildduck-mta.toml",
+    "config": "NODE_CONFIG_ONLY=true npm start",
+    "test": "grunt"
+  },
+  "dependencies": {
+    "@wasc/zone-mta": "3.4.0",
+    "zonemta-delivery-counters": "^1.0.1",
+    "zonemta-loop-breaker": "1.0.2",
+    "zonemta-wildduck": "^1.3.27"
+  },
+  "devDependencies": {
+    "eslint-config-nodemailer": "^1.2.0",
+    "grunt": "^1.0.1",
+    "grunt-cli": "^1.2.0",
+    "grunt-eslint": "^24.0.0"
+  },
+  "optionalDependencies": {}
 }
