--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wildduck-mta",
+  "name": "@wasc/wildduck-mta",
   "private": true,
   "version": "1.1.0",
   "description": "MTA component for the Wild Duck Mail Server",
@@ -9,6 +9,14 @@
     "start": "node index.js --config=config/wildduck-mta.toml",
     "config": "NODE_CONFIG_ONLY=true npm start",
     "test": "grunt"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "release": {
+    "branches": [
+      "master"
+    ]
   },
   "dependencies": {
     "@wasc/zone-mta": "3.4.0",
